--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.localtone.penguinsunbound"
+      package="com.localtone.tcgtug"
       android:versionCode="1"
       android:versionName="1.0">
       
     <uses-permission android:name="android.permission.INTERNET" />
       
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
-        <activity android:name=".PenguinsUnbound"
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
+        <activity android:name=".TCGTUG"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -15,11 +15,10 @@
             </intent-filter>
         </activity>
         
-        <activity android:name=".Website" android:label="@string/hello"> 
-		</activity>
+        <activity android:name=".Website"/> 
 		
-		<activity android:name=".RssFeedList" android:label="@string/hello"> 
-		</activity>
+		<activity android:name=".RssFeedWebsiteList"/> 
+		<activity android:name=".RssFeedGoogleGroupList"/> 
 		
     </application>
     <uses-sdk android:minSdkVersion="3" />
